# Mymux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: linux-build.yml  macos-build.yml
crates/mycli-core/src/: executor.rs  models.rs
crates/mycli-desktop/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
crates/mycli-desktop/binaries/: README.md
crates/mycli-desktop/capabilities/: default.json
crates/mycli-desktop/examples/: conpty_probe.rs  conpty_ps_probe.rs
crates/mycli-desktop/frontend/: app.js  index.html  style.css
crates/mycli-desktop/src/: browser.rs  commands.rs  explorer.rs  main.rs  session.rs  terminal.rs  tools.rs
crates/mycli-tui/src/: app.rs
crates/mymux-server/: Cargo.toml
crates/mymux-server/migrations/: 0001_init.sql  0002_saved_commands.sql  0003_command_defaults.sql  0004_projects_layouts.sql
crates/mymux-server/src/: agent_status.rs  audit.rs  auth.rs  commands.rs  config.rs  db.rs  error.rs  layout.rs  main.rs  projects.rs  routes.rs  state.rs  terminal.rs  util.rs  ws_terminal.rs
crates/mymux-server/static/: app.js  index.html  login.html  style.css
deploy/: cloudflare.ini.example  config.example.toml  deploy.sh  mymux-claude-hook.sh  mymux-console.service  nginx.mymux-console.conf
desktop/: main.cjs  preload.cjs  renderer.html  renderer.js  styles.css
docs/: FEATURE_GAP.md  MYMUX_SERVER.md  index.html
docs/superpowers/specs/: 2026-07-10-explorer-new-folder-session-design.md
mac-patches/: README.md  apply.sh  icon-transparent.icns  mymux-mac-fixes.patch
src/: ansi.ts  cli.ts  client.ts  completion.ts  config.ts  daemon.ts  project-config.ts  protocol.ts  store.ts  types.ts
