[workspace]
members = [
    "crates/mycli-core",
    "crates/mycli-tui",
    "crates/mycli-desktop",
    "crates/mymux-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
fs2 = "0.4"
