[package]
name = "mycli-desktop"
version = "0.1.4"
edition = "2024"

# The executable (and therefore the OS process / Task Manager name) is "Mymux".
# The Cargo *package* stays "mycli-desktop" so `-p mycli-desktop` keeps working.
[[bin]]
name = "Mymux"
path = "src/main.rs"

[dependencies]
mycli-core = { path = "../mycli-core" }
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
portable-pty = "0.9"
russh = "0.58"
russh-sftp = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
