[package]
name = "mycli-desktop"
version = "0.1.33"
edition = "2024"

# The executable (and therefore the OS process / Task Manager name) is "Mymux".
# The Cargo *package* stays "mycli-desktop" so `-p mycli-desktop` keeps working.
[[bin]]
name = "Mymux"
path = "src/main.rs"

[dependencies]
mycli-core = { path = "../mycli-core" }
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
portable-pty = "0.9"
russh = "0.58"
russh-sftp = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
# Encode a clipboard image to PNG for the terminal image-paste path.
image = { version = "0.25", default-features = false, features = ["png"] }
# Direct call to Anthropic's OAuth usage endpoint for the account-wide CL badge.
# reqwest is already in the tree (via tauri-plugin-updater) with json + rustls
# enabled, so this adds no new build-toolchain requirement.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
